--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+	id 'war'
 	id 'java'
 	id 'org.springframework.boot' version '2.7.14'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
