--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.1.2",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4"
   },
