--- a/Server/src/main/resources/application-local.yml
+++ b/Server/src/main/resources/application-local.yml
@@ -4,6 +4,8 @@ spring:
     console:
       enabled: true
       path: /h2
+      settings:
+        web-allow-others: true
   datasource:
     url: jdbc:h2:mem:test
   jpa:
