--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -23,6 +23,7 @@ repositories {
 }
 
 dependencies {
+	runtimeOnly 'mysql:mysql-connector-java:8.0.33'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
