--- a/Server/src/main/resources/application-local.yml
+++ b/Server/src/main/resources/application-local.yml
@@ -8,6 +8,10 @@ spring:
         web-allow-others: true
   datasource:
     url: jdbc:h2:mem:test
+  sql:
+    init:
+      data-locations: classpath*:data.sql
+      mode: always
   jpa:
     hibernate:
       ddl-auto: create
