--- a/Server/src/main/resources/application-server.yml
+++ b/Server/src/main/resources/application-server.yml
@@ -1,19 +1,21 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/{스키마 이름}?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-#      username:
-#      password: ""
+    url: jdbc:mysql://localhost:3306/new_schema?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+  sql:
+    init:
+      data-locations: classpath*:data.sql
+      mode: always
   thymeleaf:
     cache: false
     prefix: classpath:/templates/
     suffix: .html
     enabled: true
-  profiles:
-    include: ignore
+#  profiles:
+#    include: ignore
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
