build 오류 해결 및 exceptioncode관련 작업

--- a/Server/src/main/resources/application-local.yml
+++ b/Server/src/main/resources/application-local.yml
@@ -12,6 +12,7 @@ spring:
     init:
       data-locations: classpath*:data.sql
       mode: always
+    test: local
   jpa:
     hibernate:
       ddl-auto: create
