--- a/Server/src/main/resources/application-local.yml
+++ b/Server/src/main/resources/application-local.yml
@@ -1,29 +1,29 @@
-# 로컬 환경에서 사용하는 정보들은 application-local.yml 파일에 설정합니다.
-spring:
-  h2:
-    console:
-      enabled: true
-      path: /h2
-      settings:
-        web-allow-others: true
-  datasource:
-    url: jdbc:h2:mem:test
-  sql:
-    init:
-      data-locations: classpath*:data.sql
-      mode: always
-    test: local
-  jpa:
-    hibernate:
-      ddl-auto: create
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-        highlight_sql: true
-        color-codes: true
-        use_sql_comments: true
-    defer-datasource-initialization: true
-  output:
-    ansi:
-      enabled: ALWAYS
+## 로컬 환경에서 사용하는 정보들은 application-local.yml 파일에 설정합니다.
+#spring:
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2
+#      settings:
+#        web-allow-others: true
+#  datasource:
+#    url: jdbc:h2:mem:test
+#  sql:
+#    init:
+#      data-locations: classpath*:data.sql
+#      mode: always
+#    test: local
+#  jpa:
+#    hibernate:
+#      ddl-auto: create
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        format_sql: true
+#        highlight_sql: true
+#        color-codes: true
+#        use_sql_comments: true
+#    defer-datasource-initialization: true
+#  output:
+#    ansi:
+#      enabled: ALWAYS
