--- a/Server/src/main/resources/application-server.yml
+++ b/Server/src/main/resources/application-server.yml
@@ -9,11 +9,9 @@ spring:
     prefix: classpath:/templates/
     suffix: .html
     enabled: true
-  profiles:
-    include: ignore
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
