S3 앤드포인트 추가

--- a/Server/src/main/resources/application-server.yml
+++ b/Server/src/main/resources/application-server.yml
@@ -23,3 +23,6 @@ spring:
   output:
     ansi:
       enabled: ALWAYS
+
+  config:
+    domain: http://bprojectbucket01.s3-website.ap-northeast-2.amazonaws.com
