--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@ckeditor/ckeditor5-react": "^6.1.0",
     "@ckeditor/ckeditor5-theme-lark": "^39.0.1",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
