--- a/Server/src/main/resources/application.yml
+++ b/Server/src/main/resources/application.yml
@@ -1,3 +1,7 @@
 # 일반적으로 애플리케이션 실행 환경에 상관없는 공통 정보들은 application.yml에 설정할 수 있습니다.
 # 공통 정보가 없어 비워두었습니다.
 
+jwt:
+  key: "asdjklhalsdjkhaljsdkhasdjkhasdjkalsdjkajsdkl123412344"
+  access-token-expiration-minutes: 30
+  refresh-token-expiration-minutes: 420
