application.yml 파일 수정 완료 서버는 환경변수로 Secret Key 설정 요구

--- a/Server/src/main/resources/application-server.yml
+++ b/Server/src/main/resources/application-server.yml
@@ -26,3 +26,8 @@ spring:
 
   config:
     domain: http://bprojectbucket01.s3-website.ap-northeast-2.amazonaws.com
+
+jwt:
+  key: ${JWT_SECRET_KEY}
+  access-token-expiration-minutes: 30
+  refresh-token-expiration-minutes: 420
