--- a/Server/src/main/resources/application-local.yml
+++ b/Server/src/main/resources/application-local.yml
@@ -21,3 +21,8 @@ spring:
   output:
     ansi:
       enabled: ALWAYS
+
+jwt:
+  key: "asdjklhalsdjkhaljsdkhasdjkhasdjkalsdjkajsdkl123412344"
+  access-token-expiration-minutes: 30
+  refresh-token-expiration-minutes: 420
