--- a/client/package.json
+++ b/client/package.json
@@ -23,9 +23,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "jwt-decode": "^3.1.2",
+    "quill-delta-to-html": "^0.12.1",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
